Updated for changes to align os core with psu core.